Add faqs styles

--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -11,6 +11,7 @@
 @import "modules/editor";
 @import "modules/exercise_assignment";
 @import "modules/exercise_results";
+@import "modules/faqs";
 @import "modules/flash";
 @import "modules/gs-board";
 @import "modules/guide_corollary";
