Add Activity to user menu

--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -8,6 +8,7 @@
         <%= messages_user_menu_link %>
         <%= discussions_user_menu_link %>
         <%= user_menu_divider %>
+        <%= activity_user_menu_link %>
         <%= certificates_user_menu_link %>
       </div>
     </div>
