--- a/app/views/users/activity.html.erb
+++ b/app/views/users/activity.html.erb
@@ -4,4 +4,31 @@
 
 <%= render partial: 'layouts/user_menu' %>
 
-<%= render partial: 'activity_stats' %>
+<div class="row mu-tab-body">
+  <div class="col-md-6">
+    <%= render partial: 'activity_indicator',
+               locals: {
+                 title: t(:exercises),
+                 stats: exercises_activity_stats
+               } %>
+
+    <%= render partial: 'activity_indicator',
+               locals: {
+                 title: t(:forum),
+                 stats: messages_activity_stats
+               } %>
+  </div>
+
+  <div class="col-md-3 col-md-offset-3">
+    <ul class="nav nav-pills nav-stacked">
+      <li <%= mark_period_if_active nil %>>
+        <%= link_to t(:total), activity_user_path %>
+      </li>
+      <% activity_selector_week_range_for.each do |(week_start, week_end)| %>
+        <li <%= mark_period_if_active week_start %>>
+          <%= link_to t(:week_of, date: l(week_start)), activity_user_path(date_from: week_start, date_to: week_end) %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
