Align week activity selector vertically

--- a/app/views/users/activity.html.erb
+++ b/app/views/users/activity.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div class="col-md-4">
-    <ul class="nav nav-pills nav-stacked">
+    <ul class="nav nav-pills nav-stacked mu-user-activity-selector">
       <li <%= mark_period_if_active nil %>>
         <%= link_to t(:total), activity_user_path %>
       </li>
