Add mu- prefix to missing CSS class

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
@@ -31,7 +31,7 @@
 .mu-user-menu-items {
   margin-top: 30px;
 
-  &.hidden-sm-screen {
+  &.mu-hidden-sm-screen {
     @media only screen and (max-width: $screen-sm-max) {
       display: none;
     }
