Override jumbotron padding in Activity view
It adds 60px on the left and right sides, which we don't really
need on the current layout and causes issues on md-sized screens.

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_activity.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_activity.scss
@@ -1,6 +1,10 @@
 .mu-user-activity-indicator {
   text-align: center;
-  padding: 0.5em;
+  border-radius: 10px;
+
+  &.jumbotron {
+    padding: 0.5em 0;
+  }
 }
 
 .mu-user-activity-selector {
