--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -9,7 +9,7 @@
     <div class="mu-faqs-content">
       <%= @faqs %>
     </div>
-    <div class="mu-faqs-navbar">
+    <div class="mu-faqs-navbar hidden-xs">
       <nav>
         <ul>
         </ul>
