--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -33,6 +33,8 @@
     <div>
       <span> <strong><%= t :programming_since %>:</strong> <%= t(:time_since, time: time_ago_in_words(@user.created_at)) %> </span>
     </div>
+    <hr>
+    <%= render partial: 'user_delete_account' %>
   </div>
 </div>
 <div class="mu-profile-actions mobile visible-xs">
