--- a/app/views/users/_user_delete_account.html.erb
+++ b/app/views/users/_user_delete_account.html.erb
@@ -15,5 +15,5 @@
 </div>
 
 <%= content_for :no_container do %>
-  <%= render partial: 'user_delete_modal' %>
+  <%= render partial: 'user_delete_modal', locals: { submit_url: delete_request_user_path } %>
 <% end %>
