Fix immersive orga broken test

--- a/app/views/layouts/_organization_chooser.html.erb
+++ b/app/views/layouts/_organization_chooser.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade mu-organization-chooser" id="redirect" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-organization-chooser" id="organization-chooser-modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -14,7 +14,7 @@
   </div>
 </div>
 <script>
-  $("#redirect").modal({
+  $("#organization-chooser-modal").modal({
     backdrop: 'static',
     keyboard: false
   });
