Specify form submit button in new discussion message

--- a/app/views/discussions/_new_message.html.erb
+++ b/app/views/discussions/_new_message.html.erb
@@ -16,6 +16,6 @@
         </div>
       </div>
     </div>
-    <button class="btn btn-success btn-block discussion-new-message-button"> <%= t :comment %> </button>
+    <%= f.submit t(:comment), class: 'btn btn-success btn-block discussion-new-message-button' %>
   <% end %>
 <% end %>
