--- a/app/views/discussions/_new_message.html.erb
+++ b/app/views/discussions/_new_message.html.erb
@@ -16,6 +16,9 @@
         </div>
       </div>
     </div>
-    <%= f.submit t(:comment), class: 'btn btn-success btn-block discussion-new-message-button' %>
+    <div class="discussion-new-message-buttons">
+      <button class="btn btn-default discussion-new-message-preview-button"> <%= t :preview %> </button>
+      <%= f.submit t(:comment), class: 'btn btn-success discussion-new-message-button' %>
+    </div>
   <% end %>
 <% end %>
