Hide editor when showing new message preview

--- a/app/views/discussions/_new_message.html.erb
+++ b/app/views/discussions/_new_message.html.erb
@@ -12,7 +12,7 @@
             <div class="discussion-new-message-content">
               <%= f.editor :content, '', { id: 'new-discussion-message', class: 'form-control', placeholder: t(:message) } %>
             </div>
-            <div id="mu-message-preview"></div>
+            <div class="discussion-message-content hidden" id="new-discussion-message-preview"></div>
           </div>
         </div>
       </div>
