--- a/app/views/discussions/_new_message.html.erb
+++ b/app/views/discussions/_new_message.html.erb
@@ -18,8 +18,12 @@
       </div>
     </div>
     <div class="discussion-new-message-buttons">
-      <button class="btn btn-default discussion-new-message-preview-button preview" type="button" onclick="mumuki.Forum.discussionMessagePreview('<%= discussion_preview_message_url(@discussion) %>')"> <%= t :preview %> </button>
-      <button class="btn btn-default discussion-new-message-preview-button edit hidden" type="button" onclick="mumuki.Forum.hidePreviewAndShowEditor()"> <%= t :edit_message %> </button>
+      <% if user.moderator_here? %>
+        <button class="btn btn-default discussion-new-message-preview-button preview" type="button"
+                onclick="mumuki.Forum.discussionMessagePreview('<%= discussion_preview_message_url(@discussion) %>')"> <%= t :preview %> </button>
+        <button class="btn btn-default discussion-new-message-preview-button edit hidden" type="button"
+                onclick="mumuki.Forum.hidePreviewAndShowEditor()"> <%= t :edit_message %> </button>
+      <% end %>
       <%= f.submit t(:comment), class: 'btn btn-success discussion-new-message-button' %>
     </div>
   <% end %>
