Final new discussion message renames for more consistency

--- a/app/views/discussions/_new_message.html.erb
+++ b/app/views/discussions/_new_message.html.erb
@@ -10,9 +10,9 @@
         <div class="container-fluid">
           <div class="row">
             <div class="discussion-new-message-content">
-              <%= f.editor :content, '', { id: 'new-discussion-message', class: 'form-control', placeholder: t(:message) } %>
+              <%= f.editor :content, '', { id: 'discussion-new-message', class: 'form-control', placeholder: t(:message) } %>
             </div>
-            <div class="discussion-message-content hidden" id="new-discussion-message-preview"></div>
+            <div class="discussion-message-content hidden" id="discussion-new-message-preview"></div>
           </div>
         </div>
       </div>
