--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_results.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_results.scss
@@ -21,7 +21,7 @@ ul.results-list {
 
 .example-see-more {
   font-size: $font-size-base * 0.65;
-  background: lighten($brand-complementary, 10%);
+  background: lighten($complementary, 10%);
   border-radius: 6px;
   padding: 2px 5px;
   color: white;
