--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_progress_bar.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_progress_bar.scss
@@ -17,15 +17,15 @@
     }
   }
   .success {
-    background-color: $brand-success;
+    background-color: $success;
   }
   .warning {
-    background-color: $brand-warning;
+    background-color: $warning;
   }
   .danger {
-    background-color: $brand-danger;
+    background-color: $danger;
   }
   .info {
-    background-color: $brand-info;
+    background-color: $info;
   }
 }
