--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_timer.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_timer.scss
@@ -1,8 +1,6 @@
 .timer {
-  color: $brand-complementary;
+  color: $complementary;
   border-size: 0.1em;
   font-size: 1.25em;
   font-weight: bold;
-  color: $brand-complementary;
 }
-
