--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_breadcrumb.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_breadcrumb.scss
@@ -10,7 +10,7 @@
   .brand {
     font-size: 38px;
     padding: 8px 3px 0;
-    color: $brand-primary;
+    color: $primary;
     &:hover, &:focus {
       text-decoration: none;
     }
