--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_assignment.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_assignment.scss
@@ -1,7 +1,7 @@
 .exercise-assignment blockquote {
   @include border-radius(4px);
-  background-color: $brand-info-light;
-  border-left: 8px solid $brand-info;
+  background-color: $info-light;
+  border-left: 8px solid $info;
   font-size: 15px;
   margin: 10px 0;
 }
