--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_faqs.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_faqs.scss
@@ -66,11 +66,11 @@
         cursor: pointer;
         &.active {
           border-left: 3px solid transparent;
-          border-color: darken($brand-primary, 5%);
+          border-color: darken($primary, 5%);
           margin-left: -3px;
         }
         a {
-          color: $brand-primary;
+          color: $primary;
           &:hover {
             text-decoration: none;
           }
