--- a/app/views/discussions/new.html.erb
+++ b/app/views/discussions/new.html.erb
@@ -28,6 +28,6 @@
         </div>
       </div>
     </div>
-    <%= f.submit t(:save), class: 'btn btn-success btn-block discussion-new-message-button' %>
+    <%= f.submit t(:save), class: 'btn btn-complementary btn-block discussion-new-message-button' %>
   <% end %>
 <% end %>
