--- a/app/views/exam_registrations/show.html.erb
+++ b/app/views/exam_registrations/show.html.erb
@@ -31,7 +31,7 @@
           </div>
         <% end %>
       </div>
-      <button class="btn btn-success"> <%= t :save %> </button>
+      <button class="btn btn-complementary"> <%= t :save %> </button>
     <% end %>
   </div>
 </div>
