--- a/app/views/invitations/_invitation_form.html.erb
+++ b/app/views/invitations/_invitation_form.html.erb
@@ -19,6 +19,6 @@
     </div>
   <% end %>
   <div>
-    <%= f.submit t(:confirm), id: 'confirm_data', class: 'btn btn-success', disabled: @organization.terms_of_service.present? %>
+    <%= f.submit t(:confirm), id: 'confirm_data', class: 'btn btn-complementary', disabled: @organization.terms_of_service.present? %>
   </div>
 <% end %>
