--- a/app/views/users/terms.html.erb
+++ b/app/views/users/terms.html.erb
@@ -23,7 +23,7 @@
         <%= f.check_box :terms_of_service, required: true, onInvalid: "this.setCustomValidity('#{t(:terms_and_conditions_must_be_accepted)}')", onChange: "this.setCustomValidity(validity.valueMissing ? '#{t(:terms_and_conditions_must_be_accepted)}' : '')" %>
         <%= t(:accept_terms) %>
       </span>
-      <%= f.submit t(:accept), class: 'btn btn-success terms-acceptance-btn' %>
+      <%= f.submit t(:accept), class: 'btn btn-complementary terms-acceptance-btn' %>
     <% end %>
   </div>
 <% end %>
