--- a/app/views/book/show.html.erb
+++ b/app/views/book/show.html.erb
@@ -7,7 +7,7 @@
 
   <% @book.next_lesson_for(current_user).try do |lesson| %>
     <div class="actions">
-      <a href="<%= lesson_path(lesson) %>" class="btn btn-success">
+      <a href="<%= lesson_path(lesson) %>" class="btn btn-complementary">
         <%= t book_practice_key_for(current_user) %>
       </a>
     </div>
