--- a/app/views/layouts/exercise_inputs/forms/_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_form.html.erb
@@ -9,6 +9,6 @@
   <p><%= t :you_must_sign_in_before_submitting %></p>
 
   <div class="actions">
-    <%= login_button class: 'btn btn-success btn-block' %>
+    <%= login_button class: 'btn btn-complementary btn-block' %>
   </div>
 <% end %>
