--- a/app/views/layouts/modals/_new_message.html.erb
+++ b/app/views/layouts/modals/_new_message.html.erb
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div class="modal-footer d-none">
-            <button class="btn btn-success btn-block"> <%= t :send %> </button>
+            <button class="btn btn-complementary btn-block"> <%= t :send %> </button>
           </div>
         </div>
     <% end %>
