--- a/app/views/discussions/_new_message.html.erb
+++ b/app/views/discussions/_new_message.html.erb
@@ -19,9 +19,9 @@
     </div>
     <div class="discussion-new-message-buttons">
       <% if user.moderator_here? %>
-        <button class="btn btn-default discussion-new-message-preview-button preview" type="button" error-text="<%= t :preview_error %>"
+        <button class="btn btn-secondary discussion-new-message-preview-button preview" type="button" error-text="<%= t :preview_error %>"
                 onclick="mumuki.Forum.discussionMessagePreview('<%= preview_discussion_message_url %>')"> <%= fa_icon('eye', text: t(:preview)) %> </button>
-        <button class="btn btn-default discussion-new-message-preview-button edit d-none" type="button"
+        <button class="btn btn-secondary discussion-new-message-preview-button edit d-none" type="button"
                 onclick="mumuki.Forum.hidePreviewAndShowEditor()"> <%= fa_icon('pencil-alt', text: t(:edit_message)) %> </button>
       <% end %>
       <%= button_tag type: 'submit', class: 'btn btn-complementary discussion-new-message-button', data: { disable: true } do %>
