Replace btn-block with w-100

--- a/app/views/layouts/modals/_kids_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kids_results_aborted.html.erb
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-complementary btn-block submission_control" data-bs-dismiss="modal" aria-label="<%= t :retry_exercise %>"> <%= t :retry_exercise %> </button>
+        <button class="btn btn-complementary w-100 submission_control" data-bs-dismiss="modal" aria-label="<%= t :retry_exercise %>"> <%= t :retry_exercise %> </button>
       </div>
     </div>
   </div>
