--- a/app/views/layouts/modals/_kids_context.html.erb
+++ b/app/views/layouts/modals/_kids_context.html.erb
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-complementary btn-block" data-waiting="<%= t :loading %>" data-bs-dismiss="modal" aria-label="<%= t :continue_exercise %>"> <%= t :continue_exercise %> </button>
+        <button class="btn btn-complementary w-100" data-waiting="<%= t :loading %>" data-bs-dismiss="modal" aria-label="<%= t :continue_exercise %>"> <%= t :continue_exercise %> </button>
       </div>
     </div>
   </div>
