Remove stale gridSystemModalLabel IDs in modal titles
It was actually just part of the modal examples in the Bootstrap 3
docs - it never had any use in our code

--- a/app/views/layouts/modals/_avatar_picker.html.erb
+++ b/app/views/layouts/modals/_avatar_picker.html.erb
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span></button>
         <div class="modal-title">
-          <h3 class="text-start" id="gridSystemModalLabel"><%= t :choose_your_avatar %> </h3>
+          <h3 class="text-start"><%= t :choose_your_avatar %> </h3>
         </div>
       </div>
       <div class="modal-body">
