--- a/app/views/layouts/modals/_guide_corollary.html.erb
+++ b/app/views/layouts/modals/_guide_corollary.html.erb
@@ -15,7 +15,7 @@
           </button>
         <% end %>
         <div class="guide-corollary-title">
-          <h3 class="text-start" id="gridSystemModalLabel"><%= t :guide_finished, guide: guide.name %> </h3>
+          <h3 class="text-start"><%= t :guide_finished, guide: guide.name %> </h3>
         </div>
       </div>
       <div class="modal-body">
