--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_overlap.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_overlap.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   a {
     cursor: pointer;
-    padding: 5px;
+    margin: 5px;
   }
   &.multiple-files {
     top: 43px;
