--- a/app/views/layouts/exercise_inputs/editors/_code.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_code.html.erb
@@ -6,8 +6,8 @@
                   data: {lines: 17},
                   autocomplete: 'off' %>
   <div class="mu-overlapped">
-    <a class="editor-resize"> <%= expand_icon %></a>
-    <a class="editor-format"><%= format_icon %></a>
-    <a class="editor-reset submission-reset" data-confirm="<%= t(:confirm_reset) %>"><%= restart_icon %></a>
+    <%= expand_icon %>
+    <%= format_icon %>
+    <%= restart_icon %>
   </div>
 </div>
