Use flex on mu-inline-block-left and delete mu-inline-block-right
Also using a flex container for both title + icons instead of a row
with the icon pulling right. This was no longer possible in
Bootstrap 5 due to the way that rows wrap.

--- a/app/assets/stylesheets/mumuki_laboratory/application/_layout.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_layout.scss
@@ -110,16 +110,8 @@ hr {
 /* TODO: move to mumuki-styles */
 .mu-inline-block-left {
   display: flex;
+  flex-grow: 1;
   align-items: center;
-
-  margin-left: 15px;
-}
-
-.mu-inline-block-right {
-  float: right !important;
-  display: inline-block;
-  margin-right: 15px;
-  margin-left: 10px;
 }
 
 .mu-org-link {
