--- a/app/views/users/certificates.html.erb
+++ b/app/views/users/certificates.html.erb
@@ -2,31 +2,33 @@
   <%= breadcrumbs_for_my_account %>
 <% end %>
 
-<%= render partial: 'layouts/user_menu' %>
+<div class="row">
+  <%= render partial: 'layouts/user_menu' %>
 
-<div class="col-md-9 mu-tab-body">
-  <div class="mu-user-header">
-    <h1><%= t(:certificates) %></h1>
-  </div>
-  <% if @certificates.empty? %>
-    <div class="mu-tab-body">
-      <%= t :certificates_will_be_here %>
+  <div class="col-md-9 mu-tab-body">
+    <div class="mu-user-header">
+      <h1><%= t(:certificates) %></h1>
     </div>
-  <% else %>
-    <div class="col-md-12">
-      <div class="mu-list-group">
-        <% @certificates.each do |certificate| %>
-            <span class="mu-list-group-item">
-              <a href="<%= download_certificate_path certificate.code %>" target="_blank"><i class="fas fa-fw fa-download"></i></a>
-              <span class="mu-divider-vertical"></span>
-              <a href="<%= linkedin_post_url certificate %>" target="_blank"><i class="fab fa-fw fa-linkedin"></i></a>
-              <span class="mu-divider-vertical"></span>
-              <a href="<%= verify_certificate_path certificate.code %>" target="_blank">
-                <span class="mu-text-capitalize"><%= certificate.title %> - <%= certificate.description %></span>
-              </a>
-            </span>
-        <% end %>
+    <% if @certificates.empty? %>
+      <div class="mu-tab-body">
+        <%= t :certificates_will_be_here %>
       </div>
-    </div>
-  <% end %>
+    <% else %>
+      <div class="col-md-12">
+        <div class="mu-list-group">
+          <% @certificates.each do |certificate| %>
+              <span class="mu-list-group-item">
+                <a href="<%= download_certificate_path certificate.code %>" target="_blank"><i class="fas fa-fw fa-download"></i></a>
+                <span class="mu-divider-vertical"></span>
+                <a href="<%= linkedin_post_url certificate %>" target="_blank"><i class="fab fa-fw fa-linkedin"></i></a>
+                <span class="mu-divider-vertical"></span>
+                <a href="<%= verify_certificate_path certificate.code %>" target="_blank">
+                  <span class="mu-text-capitalize"><%= certificate.title %> - <%= certificate.description %></span>
+                </a>
+              </span>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
