--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,10 @@
   <%= breadcrumbs_for_my_account %>
 <% end %>
 
-<%= render partial: 'layouts/user_menu' %>
+<div class="row">
+  <%= render partial: 'layouts/user_menu' %>
 
-<div class="col-md-9 mu-tab-body">
-  <%= render partial: 'user_form' %>
+  <div class="col-md-9 mu-tab-body">
+    <%= render partial: 'user_form' %>
+  </div>
 </div>
