Tweak margins to make user menu aligned again

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
@@ -11,11 +11,9 @@
   font-size: 15px;
   color: $mu-color-disabled;
   text-transform: uppercase;
-  padding-left: 2px;
   cursor: pointer;
 
   @include media-breakpoint-up(md) {
-    padding-left: 15px;
     cursor: auto;
 
     i {
@@ -23,13 +21,18 @@
     }
 
     span {
-      padding-left: 0px;
+      padding-left: 0;
     }
   }
 }
 
 .mu-user-menu-items {
   margin-top: 30px;
+
+  @include media-breakpoint-down(md) {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 
   &.mu-hidden-sm-screen {
     @include media-breakpoint-down(md) {
@@ -59,5 +62,9 @@
     border-top: 2px solid $mu-color-separator;
 
     margin: 25px 0;
+
+    @include media-breakpoint-up(md) {
+      margin-right: 15px;
+    }
   }
 }
