--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -2,7 +2,7 @@
   <div class="mu-user-menu">
     <div class="mu-user-menu-content">
       <%= user_menu_header %>
-      <div class="col-xs-12 mu-user-menu-items mu-hidden-sm-screen">
+      <div class="mu-user-menu-items mu-hidden-sm-screen">
         <%= profile_user_menu_link %>
         <%= user_menu_divider %>
         <%= messages_user_menu_link %>
@@ -14,5 +14,5 @@
     </div>
     <div class="mu-user-menu-divider vertical d-none d-md-block"></div>
   </div>
+  <div class="mu-user-menu-divider horizontal d-block d-md-none"></div>
 </div>
-<div class="mu-user-menu-divider horizontal d-block d-md-none"></div>
