Keep edit avatar button tied to the avatar

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
@@ -1,3 +1,8 @@
+.mu-user-avatar-container {
+  text-align: center;
+  white-space: nowrap;
+}
+
 .mu-user-avatar {
   width: 250px;
   height: 250px;
