Make right-hand side elements in the navbar always visible
Although breadcrumbs appear last in the code, order-lg-# classes
are used to specify they should go first on large screens. This is
to avoid Bootstrap navbar hiding the avatar, level and notification
bell icons when collapsing, which it does if they're declared after
the collapsible components (the breadcrumbs in this case).

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#muNavbar" aria-controls="muNavbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="muNavbar">
-          <div class="mu-navbar-breadcrumb">
-            <ul class="navbar-nav mu-breadcrumb-list">
-              <%= yield :breadcrumbs %>
-            </ul>
-          </div>
-        </div>
-        <div class="mu-navbar-avatar">
+        <div class="mu-navbar-avatar order-lg-2">
           <% if current_logged_user? %>
             <% if in_gamified_context? %>
               <div class="mu-navbar-element">
@@ -41,6 +34,13 @@
           <% else %>
             <%= login_button %>
           <% end %>
+        </div>
+        <div class="collapse navbar-collapse" id="muNavbar">
+          <div class="mu-navbar-breadcrumb order-lg-1">
+            <ul class="navbar-nav mu-breadcrumb-list">
+              <%= yield :breadcrumbs %>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
