Replace outdated form-group with custom mu-form
Also remove some unused instances of 'field' class

--- a/app/views/invitations/_invitation_form.html.erb
+++ b/app/views/invitations/_invitation_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for current_user, method: 'post', url: {action: 'join'} do |f| %>
+<%= form_for current_user, method: 'post', url: {action: 'join'}, html: {class: 'mu-form'} do |f| %>
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="info">
       <div class="row mu-tab-body">
