--- a/app/views/layouts/exercise_inputs/editors/_code.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_code.html.erb
@@ -1,4 +1,4 @@
-<div class="field form-group editor-code">
+<div class="editor-code">
   <%= form.editor :content, 'dynamic',
                   placeholder: t(:editor_placeholder),
                   class: 'form-control editor',
