--- a/app/views/layouts/exercise_inputs/editors/_free_form.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_free_form.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div>
   <%= form.hidden_field :content, value: @current_content %>
   <%= raw @exercise.free_form_editor_source %>
 </div>
