--- a/app/views/layouts/exercise_inputs/editors/_multiple_choice.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_choice.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div>
   <input id="solution_content" type="text" name="solution[content]" style="display: none">
   <% @exercise.pretty_choices.each do |choice| %>
     <div class="field checkbox complementary complementary-checkbox">
