--- a/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
@@ -1,4 +1,4 @@
-<div class="field form-group editor-code">
+<div class="editor-code">
 
   <div class="editor-files">
     <span class="files-tabs">
