--- a/app/views/layouts/exercise_inputs/editors/_text.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_text.html.erb
@@ -1,4 +1,4 @@
-<div class="field form-group mu-editor-one-liner">
+<div class="mu-editor-one-liner">
   <%= form.editor :content, 'dynamic',
                   class: 'form-control editor',
                   value: @current_content,
