--- a/app/views/layouts/exercise_inputs/editors/_upload.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_upload.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div>
   <% @max_file_size = 256000 %>
 
   <textarea id="solution_content" type="text" name="solution[content]" class="d-none"></textarea>
