--- a/app/views/layouts/exercise_inputs/read_only_editors/_free_form.html.erb
+++ b/app/views/layouts/exercise_inputs/read_only_editors/_free_form.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div>
   <%= hidden_field_tag :solution_content, content %>
   <%= raw exercise.free_form_editor_source %>
 </div>
