--- a/app/views/layouts/exercise_inputs/read_only_editors/_multiple_choice.html.erb
+++ b/app/views/layouts/exercise_inputs/read_only_editors/_multiple_choice.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div>
   <% exercise.pretty_choices.each do |choice| %>
     <div class="field checkbox complementary complementary-checkbox">
       <%= check_box_tag(choice.id, '1', checked?(choice, content), disabled: true, class: 'solution-choice mu-read-only', 'data-index' => choice.index) %>
