--- a/app/views/layouts/exercise_inputs/read_only_editors/_single_choice.html.erb
+++ b/app/views/layouts/exercise_inputs/read_only_editors/_single_choice.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div>
   <% exercise.pretty_choices.each do |choice| %>
     <div class="field radio complementary complementary-radio">
       <%= radio_button_tag :content, choice.value, checked?(choice, content), disabled: true, class: 'mu-read-only' %>
