--- a/app/views/layouts/exercise_inputs/read_only_editors/_text.erb
+++ b/app/views/layouts/exercise_inputs/read_only_editors/_text.erb
@@ -1,3 +1,3 @@
-<div class="field form-group">
+<div>
   <%= Mumukit::ContentType::Markdown.to_html(Mumukit::ContentType::Markdown.code(content)) %>
 </div>
