--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_activity.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_activity.scss
@@ -2,7 +2,6 @@
   text-align: center;
   border-radius: 10px;
 
-  &.jumbotron {
-    padding: 0.5em 0;
-  }
+  padding: 0.5em 0;
+  margin-bottom: 30px;
 }
